{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 28,
  "lineage": "a44593b9-7503-65c9-1bc8-4308b0cee4f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gopang",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193452400412:internet-gateway/igw-0825d183260e8ec76",
            "id": "igw-0825d183260e8ec76",
            "owner_id": "193452400412",
            "region": "us-east-1",
            "tags": {
              "Name": "gopang-igw"
            },
            "tags_all": {
              "Name": "gopang-igw"
            },
            "vpc_id": "vpc-0faf22a8d44758043"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.gopang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193452400412:route-table/rtb-08f05f6c2779a7e94",
            "id": "rtb-08f05f6c2779a7e94",
            "owner_id": "193452400412",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0825d183260e8ec76",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gopang-public-rt"
            },
            "tags_all": {
              "Name": "gopang-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0faf22a8d44758043"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193452400412",
            "id": "rtb-08f05f6c2779a7e94",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gopang",
            "aws_vpc.gopang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b208c2bd5a7fa112",
            "region": "us-east-1",
            "route_table_id": "rtb-08f05f6c2779a7e94",
            "subnet_id": "subnet-0aacd934ca8c06a42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gopang",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.gopang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193452400412:security-group/sg-0af26c2f721e1076d",
            "description": "Security group for Gopang EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af26c2f721e1076d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP redirect",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 2222,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2222
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "AI Engine internal",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Backend API internal",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "gopang-ec2-sg-new",
            "name_prefix": "",
            "owner_id": "193452400412",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gopang-ec2-sg"
            },
            "tags_all": {
              "Name": "gopang-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0faf22a8d44758043"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193452400412",
            "id": "sg-0af26c2f721e1076d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.gopang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193452400412:security-group/sg-03292572406699f83",
            "description": "Security group for Gopang EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03292572406699f83",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from EC2",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0af26c2f721e1076d"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "gopang-efs-sg",
            "name_prefix": "",
            "owner_id": "193452400412",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gopang-efs-sg"
            },
            "tags_all": {
              "Name": "gopang-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0faf22a8d44758043"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193452400412",
            "id": "sg-03292572406699f83",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.gopang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193452400412:subnet/subnet-0032e70bae3889720",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0032e70bae3889720",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193452400412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "gopang-private-subnet"
            },
            "tags_all": {
              "Name": "gopang-private-subnet"
            },
            "vpc_id": "vpc-0faf22a8d44758043"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193452400412",
            "id": "subnet-0032e70bae3889720",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.gopang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193452400412:subnet/subnet-0aacd934ca8c06a42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aacd934ca8c06a42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "193452400412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "gopang-public-subnet"
            },
            "tags_all": {
              "Name": "gopang-public-subnet"
            },
            "vpc_id": "vpc-0faf22a8d44758043"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193452400412",
            "id": "subnet-0aacd934ca8c06a42",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.gopang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gopang",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193452400412:vpc/vpc-0faf22a8d44758043",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06eef32b55157cee9",
            "default_route_table_id": "rtb-07e06fb693cd6dd5b",
            "default_security_group_id": "sg-0e25537808d27c73d",
            "dhcp_options_id": "dopt-0f7b91b44f25d321e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0faf22a8d44758043",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e06fb693cd6dd5b",
            "owner_id": "193452400412",
            "region": "us-east-1",
            "tags": {
              "Name": "gopang-vpc"
            },
            "tags_all": {
              "Name": "gopang-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193452400412",
            "id": "vpc-0faf22a8d44758043",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}